@@ -1,3 +1,9 @@
+2005-04-14  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml: sync with freedesktop.org.xml.in content
+	* freedesktop.org.xml.in: added application/x-cue as the CD image
+	cuesheet mime-type
+
 2005-04-14  Miloslav Trmac  <mitr@volny.cz>
 
 	* configure.in: Added "rw" (Kinyarwanda) to ALL_LINGUAS.
